--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Preflop Trainer</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="icon.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Poker Range App">
 </head>
 <body>
   <h1>Preflop Trainer</h1>
