--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Preflop Trainer</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
   <h1>Preflop Trainer</h1>
@@ -15,7 +16,7 @@
   </div>
 
   <div id="tableContainer">
-    <svg id="tableSVG" viewBox="0 0 350 200" preserveAspectRatio="xMidYMid meet"></svg>
+    <svg id="tableSVG" viewBox="0 0 350 180" preserveAspectRatio="xMidYMid meet"></svg>
   </div>
 
   <div id="questionArea">
@@ -34,15 +35,12 @@
     let mode = "vs_open";
     let currentSituation = {};
 
-    // 例：レンジデータはここにある想定（実際のデータに置き換えてください）
     const ranges = {
       vs_open: {
         UTG: ["AA", "AKs", "AQs", "99"],
         MP: ["AA", "AKs", "AQs", "AJo", "99", "KTs"],
         CO: ["AA", "AKs", "AQs", "AJo", "KTs", "99", "88"],
-        BTN: ["AA", "AKs", "AQs", "AJo", "KTs", "99", "88", "77", "66", "55", "A5s"],
-        SB: ["AA", "AKs", "AQs", "AJo", "KTs", "99", "88", "77"],
-        BB: ["AA", "AKs", "AQs", "AJo", "KTs", "99", "88"]
+        BTN: ["AA", "AKs", "AQs", "AJo", "KTs", "99", "88", "77", "66", "55", "A5s"]
       },
       vs_cold: {
         CO_vs_UTG: {
@@ -56,17 +54,6 @@
           "fold": ["KTs", "88"]
         }
       }
-    };
-
-    // 各ポジションの丸テーブル内での座標（楕円上、350x200ビュー）
-    // 横長楕円の上辺を基準に6点配置（時計回り）
-    const tablePositions = {
-      UTG: { x: 70,  y: 40 },
-      MP:  { x: 130, y: 20 },
-      CO:  { x: 220, y: 20 },
-      BTN: { x: 280, y: 40 },
-      SB:  { x: 320, y: 110 },
-      BB:  { x: 200, y: 160 }
     };
 
     function setMode(newMode) {
@@ -83,7 +70,6 @@
       document.getElementById("result").innerText = "";
 
       if (mode === "vs_open") {
-        // ヒーローポジションは6-maxの6ポジションからランダム選択
         const hero = positions[Math.floor(Math.random() * positions.length)];
         const hand = hands[Math.floor(Math.random() * hands.length)];
         currentSituation = { hero, hand };
@@ -93,10 +79,7 @@
 
         addActionButton("レイズ", "raise");
         addActionButton("フォールド", "fold");
-
-        drawTable(hero);
       } else if (mode === "vs_cold") {
-        // オープナーはUTGかMPから選ぶ
         const openers = ["UTG", "MP"];
         const opener = openers[Math.floor(Math.random() * openers.length)];
         const openerIndex = positions.indexOf(opener);
@@ -112,9 +95,9 @@
         addActionButton("コール", "call");
         addActionButton("3bet", "3bet");
         addActionButton("フォールド", "fold");
-
-        drawTable(hero, opener);
       }
+
+      drawTable();
     }
 
     function addActionButton(label, action) {
@@ -126,7 +109,7 @@
 
     function checkAnswer(action) {
       if (mode === "vs_open") {
-        const openRange = ranges.vs_open[currentSituation.hero] || [];
+        const openRange = ranges.vs_open[currentSituation.hero];
         const isRaise = openRange.includes(currentSituation.hand);
         const correct = (action === "raise" && isRaise) || (action === "fold" && !isRaise);
 
@@ -154,52 +137,75 @@
       }
     }
 
-    // SVGで楕円テーブルを描く＆ポジションを表示
-    // modeによってヒーロー・オープナーを色分け
-    function drawTable(hero, opener=null) {
+    function drawTable() {
       const svg = document.getElementById("tableSVG");
-      svg.innerHTML = ""; // クリア
+      svg.innerHTML = "";
 
-      // テーブル楕円 (横長)
+      // テーブルの楕円
       const ellipse = document.createElementNS("http://www.w3.org/2000/svg", "ellipse");
       ellipse.setAttribute("cx", 175);
-      ellipse.setAttribute("cy", 100);
+      ellipse.setAttribute("cy", 90);
       ellipse.setAttribute("rx", 160);
-      ellipse.setAttribute("ry", 90);
+      ellipse.setAttribute("ry", 70);
       ellipse.setAttribute("fill", "#222");
       ellipse.setAttribute("stroke", "#00bcd4");
       ellipse.setAttribute("stroke-width", "3");
       svg.appendChild(ellipse);
 
-      // プレイヤー丸とラベル配置
-      positions.forEach(pos => {
-        const coord = tablePositions[pos];
+      // プレイヤー配置（6-max）
+      const playerPositions = [
+        { x: 175, y: 25 },   // UTG (上中央)
+        { x: 275, y: 65 },   // MP (右上)
+        { x: 300, y: 125 },  // CO (右下)
+        { x: 225, y: 150 },  // BTN (下右寄り)
+        { x: 120, y: 150 },  // SB (下左寄り)
+        { x: 50,  y: 120 },  // BB (左下)
+      ];
 
+      // 各プレイヤーの名前表示
+      playerPositions.forEach((pos, i) => {
+        const text = document.createElementNS("http://www.w3.org/2000/svg", "text");
+        text.setAttribute("x", pos.x);
+        text.setAttribute("y", pos.y);
+        text.setAttribute("fill", "#00bcd4");
+        text.setAttribute("font-size", "14");
+        text.setAttribute("font-weight", "bold");
+        text.setAttribute("text-anchor", "middle");
+        text.setAttribute("dominant-baseline", "middle");
+        text.textContent = positions[i];
+        svg.appendChild(text);
+      });
+
+      // 自分の位置を強調表示
+      const heroIndex = positions.indexOf(currentSituation.hero);
+      if (heroIndex >= 0) {
+        const pos = playerPositions[heroIndex];
         const circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-        circle.setAttribute("cx", coord.x);
-        circle.setAttribute("cy", coord.y);
-        circle.setAttribute("r", 20);
-
-        // ヒーロー or オープナーなら色を変える
-        if (pos === hero) {
-          circle.setAttribute("fill", "#00bcd4"); // 水色
-          circle.setAttribute("stroke", "#004d59");
-          circle.setAttribute("stroke-width", "3");
-        } else if (pos === opener) {
-          circle.setAttribute("fill", "#ff9800"); // オレンジ
-          circle.setAttribute("stroke", "#b26a00");
-          circle.setAttribute("stroke-width", "3");
-        } else {
-          circle.setAttribute("fill", "#555");
-          circle.setAttribute("stroke", "#222");
-          circle.setAttribute("stroke-width", "2");
-        }
-        circle.classList.add("player-circle");
+        circle.setAttribute("cx", pos.x);
+        circle.setAttribute("cy", pos.y - 3);
+        circle.setAttribute("r", 14);
+        circle.setAttribute("fill", "#00bcd4");
+        circle.setAttribute("opacity", "0.3");
         svg.appendChild(circle);
+      }
 
-        // ラベル
-        const label = document.createElementNS("http://www.w3.org/2000/svg", "text");
-        label.setAttribute("x", coord.x);
-        label.setAttribute("y", coord.y + 5);
-        label.setAttribute("text-anchor", "middle");
-        label.setAttribute("class", "
+      // 相手の位置を強調表示（vs_coldモードのみ）
+      if (mode === "vs_cold" && currentSituation.opener) {
+        const openerIndex = positions.indexOf(currentSituation.opener);
+        if (openerIndex >= 0) {
+          const pos = playerPositions[openerIndex];
+          const circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
+          circle.setAttribute("cx", pos.x);
+          circle.setAttribute("cy", pos.y - 3);
+          circle.setAttribute("r", 14);
+          circle.setAttribute("fill", "#ff4081");
+          circle.setAttribute("opacity", "0.3");
+          svg.appendChild(circle);
+        }
+      }
+    }
+
+    generateSituation();
+  </script>
+</body>
+</html>
